Regression: Avoid reflows on lazy image placeholders
Now we are applying width: 100% to all placeholders we are causing
significant reflows for the entire page.

Restrict altering the height on only real images which can be distorted
by dimensional changes

Bug: T191893

--- a/resources/skins.minerva.content.styles/images.less
+++ b/resources/skins.minerva.content.styles/images.less
@@ -57,6 +57,12 @@
 		// make sure that images in articles don't cause a horizontal scrollbar
 		// on small screens
 		max-width: 100% !important;
+	}
+
+	// Note height auto is only applied to images. Not neeed for the lazy-image-placeholder which is
+	// a gray box and will cause reflows.
+	noscript > img,
+	a > img {
 		height: auto !important;
 	}
 
